# oracle-ai-database-dify-plugin

./: .difyignore  .env.example  .gitignore  MARKETPLACE_HANDOVER.md  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: README.md  seed_support_note_embeddings.py  setup_support_ops_demo.sql  verify_support_ops_demo.sql
oracle_ai_database/: __init__.py  client.py  credentials.py  sql_safety.py
provider/: __init__.py  oracle.py  oracle.yaml
tests/: conftest.py  test_client.py  test_demo_seeder.py  test_provider.py  test_scaffold.py  test_sql_safety.py  test_tools.py
tools/: __init__.py  _shared.py  external_knowledge_search.py  external_knowledge_search.yaml  external_vector_search.py  external_vector_search.yaml  hybrid_knowledge_search.py  hybrid_knowledge_search.yaml  nl2sql_query.py  nl2sql_query.yaml  read_only_sql.py  read_only_sql.yaml  select_ai_query.py  select_ai_query.yaml  write_only_sql.py  write_only_sql.yaml
