[project]
name = "oracle-ai-database-dify-plugin"
version = "0.0.1"
description = "Dify Tool plugin for Oracle AI Database"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dify_plugin>=0.0.1",
    "oracledb>=2.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
