[project]
name = "oracle-ai-database-dify-plugin"
version = "0.0.5"
description = "Read-only SQL and knowledge retrieval tools for Oracle AI Database in Dify"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dify_plugin>=0.9.1,<0.10.0",
    "oracledb>=4.0.1,<5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
